--- a/writeup/dm_angular_ps.tex
+++ b/writeup/dm_angular_ps.tex
@@ -370,7 +370,7 @@ mean of dispersion measures.
 \begin{equation}
     \hat{\lambda}_\alpha = \lambda_0
     + \frac{F^{-1}_{\alpha\beta}}{2} 
-    \left[ \bDelta^t \bC^{-1} \bC_{,\beta} \bC^{-1} \bDelta
+    \left[ \bDelta^T \bC^{-1} \bC_{,\beta} \bC^{-1} \bDelta
     - \mathrm{Tr}\left[\bC^{-1} \bC_{,\beta}\right] \right],
 \end{equation}
 for some fiducial value of the parameter $\lambda_0$.  $F_{\alpha\beta}$ is the
