Partially working script.

--- a/writeup/dm_angular_ps.tex
+++ b/writeup/dm_angular_ps.tex
@@ -307,6 +307,10 @@ estimator. We parameterized the variance from this term as
     = \delta_{ij} \sigma^2_{\rm src}.
 \end{equation}
 
+\red{$D^{\bar{n}_e}_i$ and $D^{\rm src}_i$ are likely correlated due to
+    redshift evolution of source events, but this does not affect the
+    measurement since both are treated as noise terms.}
+
 The cosmological information lies in the correlations between the
 $D^{\delta_e}_i$. If the redshifts of the observed FRBs where known, we
 would write the probability density function of this set as
